Fix call not being visible

--- a/style.css
+++ b/style.css
@@ -74,9 +74,6 @@ body {
     max-width: 400px;
 }
 
-.sign-up, .call-inner-container {
-    background-color: rgba(0,0,0,0);
-}
 
 .hero-image {
     margin-top: 48px;
@@ -87,13 +84,15 @@ body {
 
 
 
-.sign-up {
+.sign-up, .open-wiki {
     color: white;
     font-size: 16px;
     font-weight: 900;
     text-align: center;
     padding: 10px 32px;
     border: none;
+    border: 2px solid white;
+    background-color: rgba(0,0,0,0);
 }
 
 .abilities-container {
@@ -182,7 +181,6 @@ button {
 }
 
 .call-outer-container {
-    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -192,6 +190,8 @@ button {
 .call-inner-container {
     width: 1000px;
     height: 150px;
+    border: 5px solid white;
+    border-radius: 500px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -209,9 +209,7 @@ button {
     margin: 0px;   
 }
 
-.sign-up {
-    border: 2px solid white;
-}
+
 
 .footer {
     display: flex;
